Fix for wipro flag error message spacing

--- a/src/shared/containers/ErrorMessage.scss
+++ b/src/shared/containers/ErrorMessage.scss
@@ -32,6 +32,10 @@ $sm-space-40: $base-unit * 8;
   }
 }
 
+.wiproSupport {
+  text-align: center;
+}
+
 .title {
   color: $tc-red;
   font-size: 15px;
